tests/semantic_errors/out_of_bounds_circle.draw
CIRCLE(760, 300, 80) COLOR red WIDTH 2 NOFILL;
